syntax = "proto3";
package proto;

message User {
  string id = 1;
  string user_id = 2;
  string email = 3;
  string password = 4;
}

message ListUsersReq {}

message ListUsersRes {
  User user = 1;
}

message CreateUserReq {
  User user = 1;
}

message CreateUserRes {
  User user = 1;
}

message GetUserReq {
  string id = 1;
}

message GetUserRes {
  User user = 1;
}

service UserService {
  rpc CreateUser (CreateUserReq) returns (CreateUserRes);
  rpc GetUser (GetUserReq) returns (GetUserRes);
  rpc ListUsers (ListUsersReq) returns (stream ListUsersRes);
}
